	that link a variable to a function (useful for example for linking
	an R variable to an internal C global).

    o	The internal download.file() etc now allow URLs of the form
	ftp://user@foo.bar/ and ftp://user:pass@foo.bar/

    o	Added function file.rename().

    o	.Alias has been removed from all R sources and deprecated.

    o	symbols() now has automatical xlab and ylab and a main argument
	which eliminates an incorrect warning.

    o	hist.default() allows `breaks' to specify a rule to choose the
        number of classes, and rules "Sturges" (the previous default,
	"Scott" and "FD" (Freedman-Diaconis) are supplied (based on
	package MASS).

    o	The symbol font can now be set on a postscript() device, and
	support has been added for using Computer Modern type-1 fonts
	(including for symbols). (Contributed by Brian D'Urso.)

    o	There is now support for URW font families in the postscript()
	device: this will give access to more characters and more
	appropriate metrics on PostScript devices using URW fonts (such
	as ghostscript).

    o	stars() has been enhanced; new `mar' argument uses smaller mar(gins)
	by default; further `nrow and `ncol' as S-PLUS, `frame.plot',
	`flip.labels', `lty' and explicit `main', `sub', `xlab' and `ylab'.
	Note that `colors' has been replaced by `col.segments' and there's
	a new `col.stars'.

	stars() now returns the locations invisibly.

    o	contour() is now generic.

    o	rle() now returns a classed object, has a print method and an inverse.

    o	Sys.setlocale() now issues a warning if it fails.


DOCUMENTATION CHANGES

    o	`Writing R Extensions' has a new chapter on generic/method
	functions.


UTILITIES

    o	New package `tools' for package development and administration
	tools, containing the QA tools checkFF(), codoc() and undoc()
	previously in package base, as well as the following new ones:

	-  checkAssignFuns() for checking whether the final argument of